# rosprolog-java

./: CMakeLists.txt  README.md  build.gradle  package.xml  settings.gradle
rosprolog-java/src/main/java/org/knowrob/rosprolog/: PrologValue.java
rosprolog-java/src/main/java/org/knowrob/rosprolog/client/: PrologClient.java  PrologQueryProxy.java
rosprolog-java/src/main/java/org/knowrob/rosprolog/query/: AllSolutionsCommand.java  QueryCommand.java
rosprolog-java/src/main/java/org/knowrob/rosprolog/solutions/: PrologAllSolutions.java  PrologSolutions.java
rosprolog-java/src/main/java/org/knowrob/rosprolog/test/: JSONPrologTestClient.java
rosprolog_java/: build.gradle
rosprolog_java/src/main/java/org/knowrob/rosprolog/: PrologBindings.java  PrologTerm.java
rosprolog_java/src/main/java/org/knowrob/rosprolog/query/: HasMoreSolutionsCommand.java  JSONQuery.java  NextSolutionCommand.java  QueryClosedException.java  QueryYieldsNullException.java  ResetCommand.java  ThreadedQuery.java
rosprolog_java/src/main/java/org/knowrob/rosprolog/solutions/: PrologIncrementalSolutions.java
rosprolog_java/src/main/java/org/knowrob/rosprolog/test/: JSONPrologTestClient.java
