<?xml version="1.0"?>
<package>
  <name>rosprolog-java</name>
  <version>1.0.0</version>
  <description>A rosjava client for rosprolog.
  </description>

  <maintainer email="danielb@uni-bremen.de">Daniel Beßler</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/knowrob/rosprolog-java</url>
  <url type="bugtracker">https://github.com/knowrob/rosprolog-java/issues</url>

  <author>Lorenz Moesenlechner</author>
  <author>Moritz Tenorth</author>

  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rosjava_bootstrap</build_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>rosjava_messages</build_depend>
  <build_depend>json_prolog_msgs</build_depend>
  <build_depend>rosprolog</build_depend>

  <run_depend>rosprolog</run_depend>
  <run_depend>knowrob_common</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>json_prolog_msgs</run_depend>
  
</package>
